@@ -1,0 +1,2 @@
+[InternetShortcut]
+URL=http://findicons.com/icon/203182/text_x_todo#
